@@ -62,11 +62,14 @@ protected: // create from serialization only
 	afx_msg void OnSysCommand(UINT nID, LPARAM lParam);
 	//  2008.03.03 by THF
 	afx_msg void OnPerlLoadFormula();
-	//  2008.02.07  by THF
-	void OnUpdateMenuPerlLoadSpecificFormula(CCmdUI* pCmdUI);
+	//  2008.03.07  by THF
+	afx_msg void OnUpdateMenuPerlLoadSpecificFormula(CCmdUI* pCmdUI);
 	afx_msg void OnPerlLoadSpecificFormula();
 	afx_msg void OnPerlEditMainFormula();
 	afx_msg void OnUpdateMenuPerlLoad(CCmdUI* pCmdUI);
+	//  2008.03.20  by THF
+	afx_msg void OnPerlCheckSyntax();
+	afx_msg void OnPerlReloadFormula();
 
 public:
 	virtual BOOL PreCreateWindow(CREATESTRUCT& cs);
