@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9,00"
 	Name="SciLexer"
 	ProjectGUID="{E757A486-9770-4DB4-8299-00E22986E604}"
 	RootNamespace="SciLexer"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
