@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9,00"
 	Name="test dll"
 	ProjectGUID="{B7E24796-7873-4A94-9CFE-2E27C5B0931A}"
 	RootNamespace="whuser"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
